change image with pict dilarangkomentar and my name h2

--- a/uhuy.html
+++ b/uhuy.html
@@ -4,5 +4,7 @@
 
   <body>
     <h1>hello good people</h1>
+    <h2>Ahmad Nurdiansah</h2>
+    <img src="image/dilarang komentar.png" alt="woyo" width="50%" />
   </body>
 </html>
