Added ids for each profile element

--- a/uhuy.html
+++ b/uhuy.html
@@ -3,8 +3,15 @@
   <head> </head>
 
   <body>
-    <h1>hello good people</h1>
-    <h2>Ahmad Nurdiansah</h2>
-    <img src="image/dilarang komentar.png" alt="woyo" width="50%" />
+    <div id="profile-container">
+      <h1>hello good people</h1>
+      <img
+        id="profile-image"
+        src="image/dilarang komentar.png"
+        alt="woyo"
+        width="50%"
+      />
+      <h2 id="profile-name">Ahmad Nurdiansah</h2>
+    </div>
   </body>
 </html>
