menambahkan beberapa style di css

--- a/uhuy.html
+++ b/uhuy.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head> </head>
+  <head>
+    <link rel="stylesheet" href="./image/style.css" />
+  </head>
 
   <body>
     <div id="profile-container">
@@ -9,7 +11,7 @@
         id="profile-image"
         src="image/dilarang komentar.png"
         alt="woyo"
-        width="50%"
+        width="10%"
       />
       <h2 id="profile-name">Ahmad Nurdiansah</h2>
     </div>
