added new div as header container with id = header

--- a/uhuy.html
+++ b/uhuy.html
@@ -5,6 +5,7 @@
   </head>
 
   <body>
+    <div id="header">Header</div>
     <div id="profile-container">
       <h1>hello good people</h1>
       <img
