membuat dua perubahan di html dan css

--- a/uhuy.html
+++ b/uhuy.html
@@ -5,6 +5,7 @@
   </head>
 
   <body>
+    <p id="profile-job">Software Engineer</p>
     <div id="profile-container">
       <h1>hello good people</h1>
       <img
